# aim_server

./: .gitmodules  CMakeLists.txt  README.md  project.yml
docs/: building.md
scripts/: code_stats.sh  static_analysis.sh
scripts/sqlite3/: create_database.sql
src/: CMakeLists.txt  auth_handler.c  auth_handler.h  auth_server.c  auth_server.h  bos_server.c  bos_server.h  connection.c  connection.h  connection_manager.c  connection_manager.h  logging.h  main.c
src/backends/: backend.c  backend.h
src/backends/sqlite3/: sqlite3_backend.c  sqlite3_backend.h
src/handlers/: bucp.c  bucp.h  buddy_handler.c  buddy_handler.h  feedbag.c  feedbag.h  icbm.c  icbm.h  locate.c  locate.h  oservice.c  oservice.h
src/memory/: buffer.c  buffer.h
src/model/: client.c  client.h  model_types.h
src/oscar/: auth_types.h  data_type_decoder.h  data_types.h  flap.h  flap_decoder.c  flap_decoder.h  flap_encoder.c  flap_encoder.h  frame.h  oscar_constants.h  snac.h  snac_decoder.c  snac_decoder.h  snac_encoder.c  snac_encoder.h  tlv.h  tlv_decoder.c  tlv_decoder.h  tlv_encoder.c  tlv_encoder.h  user_types.h
src/socket_server/: socket_server.c  socket_server.h
src/utils/: random.c  random.h
utils/: CMakeLists.txt
utils/create_user/: CMakeLists.txt  main.c
